--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     font-size: 30px;
     font-weight: 300;
 }
-.conteudo{
+.feiras{
     text-align: center;
     color: black;
     --var:var(--fonte);
