--- a/style.css
+++ b/style.css
@@ -29,3 +29,12 @@
     font-size: 20px;
     font-weight: 200;
 }
+.avaliacao{
+    text-align: center;
+}
+.titulo-avaliacao{
+    color: black;
+    --var:var(--fonte);
+    font-size: 30px;
+    font-weight: 300;
+}
