--- a/style.css
+++ b/style.css
@@ -17,14 +17,12 @@
     text-align: center;
 }
 .subtitulo{
-    color: black;
     --var:var(--fonte);
     font-size: 30px;
     font-weight: 300;
 }
 .feiras{
     text-align: center;
-    color: black;
     --var:var(--fonte);
     font-size: 20px;
     font-weight: 200;
@@ -33,8 +31,12 @@
     text-align: center;
 }
 .titulo-avaliacao{
-    color: black;
     --var:var(--fonte);
     font-size: 30px;
     font-weight: 300;
+}
+.tabela{
+    --var:var(--fonte);
+    font-size: 20px;
+    font-weight: 200;
 }
