--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     font-weight: 300;
 }
 .feiras{
-    text-align: center;
+    text-align: left;
     --var:var(--fonte);
     font-size: 20px;
     font-weight: 200;
