--- a/style.css
+++ b/style.css
@@ -44,3 +44,8 @@
     font-size: 20px;
     font-weight: 200;
 }
+.rodape{
+    background-color: blue;
+    height: 30px ;
+    padding-bottom: 0px;
+}
