--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header{
 }
 .container{
     display:grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 25% 25% 25% 25%;
 }
 article{
     margin: 1rem 1rem;
