--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ h2{
     border-radius: 0.6rem;
     font-size: 3vw;
 }
+p{
+    color: var(--cor-texto);
+    position: absolute;
+}
 img{
     height: 5rem;
     padding-top: 4rem;
