--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ h2{
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 3vw;
+    background-color: var(--cor-escura);
 }
 p{
     color: var(--cor-texto);
