--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ footer{
 footer h3{
     margin: 0.5rem;
     color: var(--cor-texto);
+    font-style: italic;
 } 
 header{
     background-color: var(--cor-escura);
